@@ -1,5 +1,7 @@
 package yahoofinance.histquotes2;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import yahoofinance.Utils;
 import yahoofinance.YahooFinance;
 import yahoofinance.util.RedirectableRequest;
@@ -10,13 +12,10 @@ import java.io.InputStreamReader;
 import java.net.URL;
 import java.net.URLConnection;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
 /**
- *
  * @author Stijn Strickx (modified by Randle McMurphy)
  */
 public class HistSplitsRequest {
@@ -33,6 +32,7 @@ public class HistSplitsRequest {
     static {
         DEFAULT_FROM.add(Calendar.YEAR, -1);
     }
+
     public static final Calendar DEFAULT_TO = Calendar.getInstance();
 
     // Interval has no meaning here and is not used here
@@ -59,6 +59,7 @@ public class HistSplitsRequest {
 
     /**
      * Put everything smaller than days at 0
+     *
      * @param cal calendar to be cleaned
      */
     private Calendar cleanHistCalendar(Calendar cal) {
@@ -72,8 +73,8 @@ public class HistSplitsRequest {
     public List<HistoricalSplit> getResult() throws IOException {
 
         List<HistoricalSplit> result = new ArrayList<HistoricalSplit>();
-        
-        if(this.from.after(this.to)) {
+
+        if (this.from.after(this.to)) {
             log.warn("Unable to retrieve historical splits. "
                     + "From-date should not be after to-date. From: "
                     + this.from.getTime() + ", to: " + this.to.getTime());
@@ -87,13 +88,13 @@ public class HistSplitsRequest {
         // Interval has no meaning here and is not used here
         // But it's better to leave it because Yahoo's standard query URL still contains it
         params.put("interval", DEFAULT_INTERVAL.getTag());
-        
+
         // This will instruct Yahoo to return splits
         params.put("events", "split");
 
         params.put("crumb", CrumbManager.getCrumb());
 
-        String url = YahooFinance.HISTQUOTES2_BASE_URL + URLEncoder.encode(this.symbol , "UTF-8") + "?" + Utils.getURLParameters(params);
+        String url = YahooFinance.HISTQUOTES2_BASE_URL + URLEncoder.encode(this.symbol, StandardCharsets.UTF_8) + "?" + Utils.getURLParameters(params);
 
         // Get CSV from Yahoo
         log.info("Sending request: " + url);
@@ -121,7 +122,7 @@ public class HistSplitsRequest {
 
     private HistoricalSplit parseCSVLine(String line) {
         String[] data = line.split(YahooFinance.QUOTES_CSV_DELIMITER);
-    	String[] parts = data[1].split("/");
+        String[] parts = data[1].split("/");
         return new HistoricalSplit(this.symbol,
                 Utils.parseHistDate(data[0]),
                 Utils.getBigDecimal(parts[0]),
